--- a/demo/demo.html
+++ b/demo/demo.html
@@ -19,8 +19,8 @@
         </div>
     </div>
 
-
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../src/timer-bar-1.0.js"></script>
+    <script src="demo.js"></script>
 </body>
 </html>
